Added chips in Transaction History

--- a/app/src/main/res/layout/act_send_money.xml
+++ b/app/src/main/res/layout/act_send_money.xml
@@ -41,6 +41,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblDescription"
         android:layout_marginTop="@dimen/elmnt_gap_xl"
+        app:endIconDrawable="@drawable/ic_scan"
+        app:endIconMode="custom"
         app:prefixText="+63">
 
         <com.google.android.material.textfield.TextInputEditText
