--- a/app/src/main/res/layout/frg_main_home.xml
+++ b/app/src/main/res/layout/frg_main_home.xml
@@ -89,6 +89,7 @@
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cardWalletBackground"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:background="@drawable/img_wallet_card_5">
