Added Blogs and Logs

--- a/app/src/main/res/layout/act_machine.xml
+++ b/app/src/main/res/layout/act_machine.xml
@@ -14,11 +14,23 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
+    <ImageButton
+        android:id="@+id/btnHistory"
+        android:layout_width="@dimen/circle_lg"
+        android:layout_height="@dimen/circle_lg"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/bg_circle_clear"
+        android:src="@drawable/ic_history"
+        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnBack"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
     <TextView
         android:id="@+id/lblHeadingVendoName"
         style="@style/Text_H1_Regular"
+        android:layout_width="wrap_content"
         android:text="@string/h1_vendo_details"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="VisualLintOverlap" />
@@ -114,11 +126,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/mx"
         android:layout_marginEnd="@dimen/mx"
-        android:layout_marginBottom="@dimen/mx"
+        android:layout_marginBottom="@dimen/elmnt_gap_lg"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="@dimen/radius_md"
         app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:strokeColor="@color/neutral_300"
@@ -153,5 +165,16 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
+
+    <Button
+        android:id="@+id/btnDelete"
+        style="@style/Btn_Secondary"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="24dp"
+        android:text="@string/btn_delete_machine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="VisualLintButtonSize" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
