--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="accent_700">#FF00796B</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="blue">#3333FD</color>
 
     <color name="ripple_primary">#FF00796B</color>
     <color name="ripple_secondary">#FFCACACA</color>
